@@ -758,10 +758,45 @@ examples/tiff
       will be used in the file creation.  Defaults are "/tmp/tmpfile1.dat" and
       "/tmp/tmpfile2.dat"
 
-  The following must also be defined in your appconfig file:
+  The following must also be defined in your apps/ configuration file:
 
     CONFIGURED_APPS += examples/tiff
     CONFIGURED_APPS += graphics/tiff
+
+examples/touchscreen
+^^^^^^^^^^^^^^^^^^^^
+
+  This configuration implements a simple touchscreen test at
+  apps/examples/touchscreen.  This test will create an empty X11 window
+  and will print the touchscreen output as it is received from the 
+  simulated touchscreen driver.
+
+    CONFIG_EXAMPLES_TOUCHSCREEN_BUILTIN - Build the touchscreen test as 
+      an NSH built-in function.  Default: Built as a standalone problem
+    CONFIG_EXAMPLES_TOUCHSCREEN_MINOR - The minor device number.  Minor=N
+      correspnds to touchscreen device /dev/input0.  Note this value must
+      with CONFIG_EXAMPLES_TOUCHSCREEN_DEVPATH.  Default 0.
+    CONFIG_EXAMPLES_TOUCHSCREEN_DEVPATH - The path to the touchscreen
+     device.  This must be consistent with CONFIG_EXAMPLES_TOUCHSCREEN_MINOR.
+     Default: "/dev/input0"
+
+  The following additional configurations must be set in the NuttX
+  configuration file:
+  
+    CONFIG_INPUTP=y
+    (Plus any touchscreen-specific settings).
+
+  The following must also be defined in your apps configuration file:
+
+    CONFIGURED_APPS += examples/tiff
+    CONFIGURED_APPS += graphics/tiff
+
+  The board-specific logic must provide the following interfaces that will
+  be called by the example in order to initialize and uninitialize the
+  touchscreen hardware:
+
+    int arch_tcinitialize(int minor);
+    int arch_tcuninitialize(void);
 
 examples/udp
 ^^^^^^^^^^^^
